<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (c) 2008 Sonatype, Inc. All rights reserved. This program 
	and the accompanying materials are made available under the terms of the 
	Eclipse Public License v1.0 which accompanies this distribution, and is available 
	at http://www.eclipse.org/legal/epl-v10.html -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.maven.ide.eclipse.ajdt</groupId>
	<artifactId>org.maven.ide.eclipse.ajdt.parent</artifactId>
	<version>0.14.5-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Maven Integration for Eclipse AJDT (Parent)</name>

	<repositories>
		<repository>
			<id>rso</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid</url>
		</repository>
		<repository>
			<id>eclipse-2020-12</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/2022-09</url>
		</repository>
		<repository>
			<id>m2e</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/technology/m2e/releases/latest</url>
		</repository>
		<repository>
			<id>ajdt</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/tools/ajdt/410/dev/update</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<!-- required for Maven and Ant AWS dependency -->
		<pluginRepository>
			<id>spring-maven-release</id>
			<name>Spring Maven Release Repository</name>
			<url>http://maven.springframework.org/release</url>
		</pluginRepository>
		<pluginRepository>
			<id>springsource-maven-release</id>
			<name>SpringSource Maven Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</pluginRepository>
	</pluginRepositories>

	<scm>
		<developerConnection>scm:git:ssh://git@github.com/joker1/m2eclipse-ajdt</developerConnection>
		<tag>HEAD</tag>
  </scm>

	<properties>
		<tycho-version>3.0.0</tycho-version>
		<!-- <m2eclipse-core.version>0.10.2.20100623-1649</m2eclipse-core.version> -->
		<!-- <m2eclipse-core.site>0.10.2/S/${m2eclipse-core.version}</m2eclipse-core.site> -->
		<!-- <m2e.site-compressed>http://repository.sonatype.org/service/local/repositories/forge-sites/content-compressed/</m2e.site-compressed> -->

		<!-- Signing -->
		<signing.skip>true</signing.skip>
		<signing.alias>pivotal</signing.alias>
		<signing.keystore>~/.keytool/pivotal.jks</signing.keystore>

		<maven.skip.tests>false</maven.skip.tests>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<modules>
		<module>org.maven.ide.eclipse.ajdt</module>
		<module>org.maven.ide.eclipse.ajdt.tests</module>
		<module>org.maven.ide.eclipse.ajdt.feature</module>
		<module>org.maven.ide.eclipse.ajdt.site</module>
	</modules>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version> 2.5.3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<preparationGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:1.9.5:add org.apache.maven.plugins:maven-scm-plugin:1.9.5:checkin</preparationGoals>
					<completionGoals>org.eclipse.tycho:tycho-versions-plugin:${tycho-version}:update-eclipse-metadata org.apache.maven.plugins:maven-scm-plugin:1.9.5:add org.apache.maven.plugins:maven-scm-plugin:1.9.5:checkin</completionGoals>
				</configuration>
			</plugin>
			<plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-scm-plugin</artifactId>
               <version>1.11.2</version>
               <executions>
                   <execution>
                       <id>default-cli</id>
                       <goals>
                           <goal>add</goal>
                           <goal>checkin</goal>
                       </goals>
                       <configuration>
                           <includes>**/META-INF/MANIFEST.MF,**/feature.xml,**/*.product,**/category.xml,**/pom.xml,**/site.xml</includes>
                           <excludes>**/target/**</excludes>
                           <message>Changing the project files versions</message>
                       </configuration>
                   </execution>
               </executions>
           </plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<deployableFeature>true</deployableFeature>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<includePackedArtifacts>true</includePackedArtifacts>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<!-- http://maven.apache.org/plugins/maven-compiler-plugin/ -->
					<source>1.11</source>
					<target>1.11</target>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.2</version>
				<executions>
					<execution>
						<id>sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<skip>${signing.skip}</skip>
					<alias>${signing.alias}</alias>
					<keystore>${signing.keystore}</keystore>
					<storepass>${signing.store.password}</storepass>
					<keypass>${signing.key.password}</keypass>
					<arguments>
						<argument>-sigalg</argument>
						<argument>SHA1withRSA</argument>
						<argument>-digestalg</argument>
						<argument>SHA1</argument>
					</arguments>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>sun-jvm</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://java.sun.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
			</properties>
		</profile>
		<profile>
			<id>osx</id>
			<activation>
				<property>
					<name>java.vendor.url</name>
					<value>http://www.apple.com/</value>
				</property>
			</activation>
			<properties>
				<tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa
					-XstartOnFirstThread</tycho.test.jvmArgs>
				<osgi.ws>cocoa</osgi.ws>
			</properties>
		</profile>
	</profiles>
</project>
